# simple-rt

./: .gitignore  .gitmodules  Application.cpp  Application.h  ApplicationBench.cpp  ApplicationBench.h  ApplicationFactory.cpp  ApplicationFactory.h  ApplicationOCL.cpp  ApplicationOCL.h  ApplicationOMP.cpp  ApplicationOMP.h  ApplicationTest.cpp  ApplicationTest.h  Arguments.cpp  Arguments.h  CMakeLists.txt  Fbx.h  File.h  Intrin.h  Main.cpp  Optimizations.h  Plane.h  Ray.cpp  Ray.h  Scene.h  SceneLoader.cpp  SceneLoader.h  Tbb.h  Vec.h  Vector.h
config/: ConsoleWindow.cpp  ConsoleWindow.h  ConsoleWindow.ui  FileEdit.cpp  FileEdit.h  FileEdit.ui  FramebufferWindow.cpp  FramebufferWindow.h  FramebufferWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  config.pro
cuda/: cudaApplication.cu  cudaApplication.h  cudaBox.h  cudaCamera.cu  cudaCamera.h  cudaCommon.h  cudaLight.cu  cudaLight.h  cudaLock.h  cudaMemory.h  cudaObject.cu  cudaObject.h  cudaRay.cu  cudaRay.h  cudaScene.h  cudaTriangle.h
cuda/tests/: cudaArrayTests.cu  cudaCameraTests.cpp  cudaDispatchTests.cpp  cudaLightTests.cpp
ocl/: Kernel.h  oclRay.cpp  oclRay.h
omp/: Plane.cpp  Plane.h  Ray.h  SSE.h  Triangle.h  Vector.h  ompApplication.h  ompBox.h  ompCamera.h  ompIntersect.h  ompIntrin.h  ompLight.h  ompObject.h  ompPlane.h  ompRay.h  ompRay2.h  ompReflect.h  ompScene.h  ompTriangle.h  ompVector.h
omp/tests/: ompCameraTests.cpp  ompDrawTests.cpp  ompIntersectTests.cpp  ompIntrinTests.cpp  ompRayTests.cpp  ompReflectTests.cpp  ompSceneTests.cpp  ompVectorTests.cpp
scenes/: simple.FBX
tests/: VectorTests.cpp
